Commenting on HTML portion

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     ></script>
   </head>
 
+
   <body>
+    <!-- haeding part -->
     <header>
       <nav>
         <h3 class="nav-title">Bangladesh 2.0</h3>
@@ -39,7 +41,7 @@
     </header>
 
 
-
+<!-- main part -->
     <main>
       <section class="Pillars">
 <h3 class="section-title">Pillars of "Bangladesh 2.0"</h3><div class="pillar">
@@ -206,6 +208,7 @@ with a certain degree of justification, be able to speak of humankind as civiliz
       
       
     </main>
+    <!-- footer part -->
     <footer>
 <section class="Newsletter">
   <div class="newsletter-container">
