--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
   <div class="pillar">
     <img src="./assets/card-icon.png" alt="">
     <h4 class="pillar-title">Innovation</h4>
-    <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    <p class="pillar-description">Innovation is defined as the process of bringing about new ideas, methods, products, services, or solutions that have a significant positive impact and value</p>
   </div>
 
   <div class="pillar">
     <img src="./assets/card-icon.png" alt="">
     <h4 class="pillar-title"> Sustainability</h4>
-    <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    <p class="pillar-description">It is of, relating to, or being a method of harvesting or using a resource so that the resource is not depleted or permanently damaged </p>
   </div>
 
   <div class="pillar">
     <img src="./assets/card-icon.png" alt="">
     <h4 class="pillar-title">Infrustructure</h4>
-    <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    <p class="pillar-description">Infrastructure is the basic facilities and system serving a country, region, or community. Examples of infrastructure include mass transit and telecommunications networks.</p>
   </div>
 
   <div class="pillar">
     <img src="./assets/card-icon.png" alt="">
     <h4 class="pillar-title">Empowerment</h4>
-    <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    <p class="pillar-description">Empowerment is the degree of autonomy and self-determination in people and in communities. </p>
   </div>
 </div>
 
